hw-detect (1.28) UNRELEASED; urgency=low

  * Drop dependency on hotplug-udeb for hw-detect as there's no such thing.

 -- Frans Pop <fjp@debian.org>  Sun, 27 Nov 2005 01:33:47 +0100

hw-detect (1.27) unstable; urgency=low

  * If we're running with udev, apt-install udev rather than hotplug.

  [ Updated translations ]
  * French (fr.po) by Christian Perrier
  * Japanese (ja.po) by Kenshi Muto
  * Romanian (ro.po) by Eddy Petrişor

 -- Colin Watson <cjwatson@debian.org>  Tue, 22 Nov 2005 21:16:15 +0000

hw-detect (1.26) unstable; urgency=low

  [ Colin Watson ]
  * If udevstart is missing, try udevsynthesize instead to try to get udev
    to create pending device nodes.

 -- Joey Hess <joeyh@debian.org>  Wed, 16 Nov 2005 18:30:21 -0500

hw-detect (1.25) unstable; urgency=low

  [ Colin Watson ]
  * If we're using coldplugging udev rather than hotplug, run udevsynthesize
    when modules are added.
  * Add a udev rule to make sure our net event hook is run even without the
    rest of hotplug.

  [ Sven Luther ]
  * chrp_rs6k -> chrp_ibm change, still keeping backward compatible support.

  [ Updated translations ]
  * Bengali (bn.po) by Baishampayan Ghose
  * Hindi (hi.po) by Nishant Sharma
  * Icelandic (is.po) by David Steinn Geirsson
  * Korean (ko.po) by Sunjae park
  * Norwegian Nynorsk (nn.po)
  * Romanian (ro.po) by Eddy Petrişor
  * Slovak (sk.po) by Peter Mann
  * Swedish (sv.po) by Daniel Nylander
  * Turkish (tr.po) by Recai Oktaş

 -- Frans Pop <fjp@debian.org>  Tue, 15 Nov 2005 20:55:09 +0100

hw-detect (1.24) unstable; urgency=low

  * Use log-output.

  * Updated translations: 
    - Catalan (ca.po) by Guillem Jover
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Kurdish (ku.po) by Erdal Ronahi
    - Dutch (nl.po) by Bart Cornelis
    - Portuguese (pt.po) by Miguel Figueiredo
    - Romanian (ro.po) by Eddy Petrisor
    - Wolof (wo.po) by Mouhamadou Mamoune Mbacke

 -- Joey Hess <joeyh@debian.org>  Mon, 26 Sep 2005 16:58:23 +0200
