@@ -1,6 +1,11 @@
 hw-detect (1.28) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * Drop dependency on hotplug-udeb for hw-detect as there's no such thing.
+
+  [ Colin Watson ]
+  * Rename /etc/network/devnames.gz to /etc/network/devnames-static.gz to
+    avoid confusion with /etc/network/devnames (closes: #340919).
 
  -- Frans Pop <fjp@debian.org>  Sun, 27 Nov 2005 01:33:47 +0100
 
